--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,12 @@
 <html>
   <head>
-    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
+    <link
+      rel="stylesheet"
+      href="<%=htmlWebpackPlugin.files.chunks.main.css %>"
+    />
   </head>
   <body>
-    <div id='App'>Hello, world!</div>
+    <div id="App"></div>
     <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
   </body>
 </html>
